# MyNalog

./: .coverage  .gitignore  CHANGELOG.md  CI_RUN_REPORT.md  CONTRIBUTING.md  FINAL_SUMMARY.md  LICENSE  MIGRATION_REPORT.md  PHASE_2_COMPLETE.md  PROJECT_FILES.md  README.md  RELEASE_NOTES.md  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
examples/: async_example.py
nalogo/: _http.py
nalogo/dto/: device.py  payment_type.py
rurus_nalog/: __init__.py  _http.py  auth.py  client.py  exceptions.py  income.py  payment_type.py  receipt.py  tax.py  user.py
rurus_nalog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rurus_nalog/dto/: __init__.py  device.py  income.py  invoice.py  payment_type.py  tax.py  user.py
tests/: __init__.py  test_auth_async.py  test_income_async.py  test_receipt_async.py
